--- a/wk1.Rmd
+++ b/wk1.Rmd
@@ -10,7 +10,7 @@ De docent kiest een thema, bijv. Customer Journey, Employee Attrition, Vastgoedw
 
 Ieder lid van ieder team zoekt nog een artikel binnen hetzelfde thema op. Dit artikel dient later als inspiratie voor de bepaling van de onderzoeksvraag en onderzoeksopzet. In hun notebook beschrijven de teams de relevantie van het thema voor hun vakgebied, welke artikelen en onderzoeksvraagstukken ze hebben gevonden en wat de belangrijkste conclusies zijn. Uiteindelijk bedenkt ieder team één nieuwe onderzoeksvraag en neemt die mee naar het volgende werkcollege.
 
-Het notebook moet bestaan uit een online document (website, blog, etc.) en aantrekkelijk zijn vormgegeven (voor de lezer). De url van het document stuur je naar de docent. Deze plaatst alle urls op de startpagina.
+Het notebook moet bestaan uit een online document (website, blog, etc.) en aantrekkelijk zijn vormgegeven (voor de lezer). De url van het document stuur je naar de docent. Deze plaatst alle urls op de <a href="https://hanbedrijfskunde.github.io/bon/index.html" target="_blank">startpagina</a>.
 
 ### Docentmateriaal
 
