--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "HAN Bedrijfskunde"
 subtitle: "Semester 1 2018/19"
+author: "Witek ten Hove en David Hartsuiker"
 output: html_document
 ---
 
@@ -8,6 +9,6 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Dit is het platform voor B-cluster Onderzoek van de opleiding HAN Bedrijfskunde. Hier plaatsen we materiaal dat specifiek gericht is aan studenten van de opleiding die in dit semester deze module volgen.
+Dit is het platform voor B-cluster Onderzoek van de opleiding HAN Bedrijfskunde. Hier plaatsen we materiaal dat specifiek gericht is aan studenten HAN Bedrijfskunde die in dit semester deze module volgen.
 
 Voor alle algemene, propedeuse-brede informatie verwijzen we naar het materiaal op [Onderwijs Online](https://onderwijsonline.han.nl/elearning/content/pNWMKBDj).
