--- a/wk1.Rmd
+++ b/wk1.Rmd
@@ -6,9 +6,9 @@ output: html_document
 
 ### Opdracht
 
-De docent kiest een thema, bijv. Customer Journey, Employee Attrition, Vastgoedwaarde, Finance, etc. en zoekt hierbij een **wetenschappelijk** <a href="https://repository.ubn.ru.nl//bitstream/handle/2066/138684/138684.pdf?sequence=1" target="_blank">artikel</a>. Dit artikel wordt uitgedeeld en besproken tijdens het eerste werkcollege.
+Het thema voor dit semester is **e-commerce**. Dit wetenschappelijke <a href="https://repository.ubn.ru.nl//bitstream/handle/2066/138684/138684.pdf?sequence=1" target="_blank">artikel</a> bespreekt de relatie tussen e-trust en klantloyaliteit en zal tijdens het eerste werkcollege worden besproken.
 
-Ieder lid van ieder team zoekt nog een artikel binnen hetzelfde thema op. Dit artikel dient later als inspiratie voor de bepaling van de onderzoeksvraag en onderzoeksopzet. In hun notebook beschrijven de teams de relevantie van het thema voor hun vakgebied, welke artikelen en onderzoeksvraagstukken ze hebben gevonden en wat de belangrijkste conclusies zijn. Uiteindelijk bedenkt ieder team één nieuwe onderzoeksvraag en neemt die mee naar het volgende werkcollege.
+Ieder lid van elk team zoekt nog een artikel binnen hetzelfde thema op. Dit artikel dient later ter inspiratie voor de bepaling van de onderzoeksvraag en onderzoeksopzet. In hun notebook beschrijven de teams de relevantie van het thema voor hun vakgebied, welke artikelen en onderzoeksvraagstukken ze hebben gevonden en wat de belangrijkste conclusies zijn. Uiteindelijk bedenkt ieder team één nieuwe onderzoeksvraag en neemt die mee naar het volgende werkcollege.
 
 Het notebook moet bestaan uit een online document (website, blog, etc.) en aantrekkelijk zijn vormgegeven (voor de lezer). De url van het document stuur je naar de docent. Deze plaatst alle urls op de <a href="https://hanbedrijfskunde.github.io/bon/index.html" target="_blank">startpagina</a>.
 
