--- a/wk5.Rmd
+++ b/wk5.Rmd
@@ -9,7 +9,7 @@ output: html_document
 Voor deze week lever je volgende in.
 
 
-### Docentmateriaal
+### Lesdocumenten
 
 Typen onderzoeksvragen en eisen onderzoeksvragen en antwoord categorieën
 
