--- a/wk2.Rmd
+++ b/wk2.Rmd
@@ -9,7 +9,7 @@ output: html_document
 Voor deze week lever je volgende in:
 
 
-### Lesdocumenten
+### Documentatie
 
 #### Qualitative vs quantitative research
 
