--- a/wk1.Rmd
+++ b/wk1.Rmd
@@ -10,7 +10,7 @@ Het thema voor dit semester is **e-commerce**. Dit wetenschappelijke <a href="ht
 
 Ieder lid van elk team zoekt nog een artikel binnen hetzelfde thema op. Dit artikel dient later ter inspiratie voor de bepaling van de onderzoeksvraag en onderzoeksopzet. In hun notebook beschrijven de teams de relevantie van het thema voor hun vakgebied, welke artikelen en onderzoeksvraagstukken ze hebben gevonden en wat de belangrijkste conclusies zijn. Uiteindelijk bedenkt ieder team één nieuwe onderzoeksvraag en neemt die mee naar het volgende werkcollege.
 
-Het notebook moet bestaan uit een online document (website, blog, etc. of <a href="https://applieddigitalskills.withgoogle.com/c/middle-and-high-school/en/research-and-develop-a-topic/explore-a-topic-with-research-and-collaboration/choose-a-research-topic.html" target="_blank">dit</a>) en aantrekkelijk zijn vormgegeven (voor de lezer). De url van het document stuur je naar de docent. Deze plaatst alle urls op de <a href="https://hanbedrijfskunde.github.io/bon/index.html" target="_blank">startpagina</a>.
+Het notebook moet bestaan uit een online document (website, blog, etc. of <a href="https://applieddigitalskills.withgoogle.com/c/middle-and-high-school/en/research-and-develop-a-topic/explore-a-topic-with-research-and-collaboration/choose-a-research-topic.html" target="_blank">dit</a>) en aantrekkelijk zijn vormgegeven (voor de lezer). De url van het document stuur je naar de docent. Deze plaatst alle urls op de [startpagina](https://hanbedrijfskunde.github.io/bon/index.html).
 
 ### Documentatie
 
