--- a/index.Rmd
+++ b/index.Rmd
@@ -11,4 +11,4 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Dit is het platform voor B-cluster Onderzoek van de opleiding HAN Bedrijfskunde. Hier plaatsen we materiaal dat specifiek gericht is aan studenten HAN Bedrijfskunde die in dit semester deze module volgen.
 
-Voor alle algemene, propedeuse-brede informatie verwijzen we naar het materiaal op [Onderwijs Online](https://onderwijsonline.han.nl/elearning/content/pNWMKBDj).
+Voor alle algemene, propedeuse-brede informatie verwijzen we naar het materiaal op <a href="https://onderwijsonline.han.nl/elearning/content/pNWMKBDj" target="_blank">Onderwijs Online</a>.
