--- a/wk2.Rmd
+++ b/wk2.Rmd
@@ -3,25 +3,38 @@ title: "Afbakening onderzoek"
 output: html_document
 ---
 
+### Voorbereiding
+Ieder **lid** van ieder team heeft een wetenschappelijk artikel over het onderzoeksthema aangeleverd. In hun notebook beschrijven de teams de relevantie van het thema voor hun vakgebied, welke artikelen en onderzoeksvraagstukken ze hebben gevonden en wat de belangrijkste conclusies zijn. Ieder team heeft één nieuwe onderzoeksvraag bedacht en neemt deze mee naar het werkcollege.
 
 ### Opdracht
 
-Voor deze week lever je volgende in:
+We zijn nog steeds bij de eerste stap van het <a href="https://en.wikipedia.org/wiki/Cross-industry_standard_process_for_data_mining" target="_blank">data analyse proces</a>, maar hebben inmiddels wel een onderzoeksthema. Door een duidelijke onderzoeksvraag te formuleren krijgt het onderzoek focus.
 
+Tijdens het werkcollege worden alle aangeleverde onderzoeksvragen doorgenomen. Er worden criteria afgesproken waarmee de kwaliteit van de vragen kan worden gemeten en de beste vraag wordt bepaald. Deze vraag zal worden gebruikt als centrale onderzoeksvraag voor alle teams. Bovendien worden afspraken gemaakt over deelvragen.
+
+Ieder team start een online document met daarin hun onderzoeksplan. De structuur is als volgt:
+
+1. Aanleiding en wetenschappelijke inzichten (o.b.v. verzamelde literatuur)
+2. Practische doelstelling
+3. Centrale vraag : welke vraag wordt dadelijk in de conclusie beantwoord?
+4. Deelvragen : welke aspecten onderzoek je om de centrale vraag te kunnen beantwoorden?
+5. Onderzoeksmethode: kwantitatief onderzoek
+6. Dataverzamelingsinstrument : enquetes
+7. Populatie en steekproefmethode
+8. Beperkingen en randvoorwaarden
+9. Tijdsplanning van het onderzoek
+
+Verder geldt het volgende:
+
+- Omvang projectplan: ca. 2 x A4
+- In het notebook wordt een koppeling geplaatst naar het onderzoeksplan
+- Ieder teamlid beschrijft zijn bijdrage aan de kwaliteit van het onderzoeksplan
+- TIP: gebruik de wetenschappelijke artikelen als inspiratie voor bovenstaande
 
 ### Documentatie
 
-#### Qualitative vs quantitative research
-
-##### Video 1
-
-Qualitative vs quantitative research
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/RvU-dMZnj7A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-##### Video 2
-
-Eisen onderzoeksvraag
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2X-QSU6-hPU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<hr>
+<div class="resp-container">
+  <iframe class="resp-iframe" src="https://www.youtube.com/embed/LWLYCYeCFak" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
 
