--- a/wk4.Rmd
+++ b/wk4.Rmd
@@ -4,13 +4,24 @@ output: html_document
 ---
 
 
+### Voorbereiding
+Inmiddels heb je met je team volgende producten klaarstaan: een verzameling artikelen, een concept projectplan en een vragenset. Je hebt nu een goed beeld van het vraagstuk dat onderzocht gaat worden en de kennis die hierover beschikbaar is. Tevens beschikt je team over een notebook waarin alle activiteiten en ervaringen tot nu toe zorgvuldig worden beschreven.
+
 ### Opdracht
+Wellicht ben je er tijdens het ontwerpproces achter gekomen dat je onderzoeksplan op onderdelen verbeterd kan worden. Tijdens het werkcollege bespreek je met de hele groep (klas) wat de kwaliteit van het uiteindelijke ontwerp wordt. Als hierover overeenstemming is bereikt, worden alle projectplannen aangepast.
 
-Voor deze week lever je volgende in.
-
+- Stel een definitief projectplan en vragenlijst op
+- Beschrijf in je notebook welke kwaliteitsverbeteringen je hebt doorgevoerd en voeg koppelingen toe naar de nieuwe versies (laat de koppelingen naar de oude versie staan)
 
 ### Documentatie
 
 Reliability vs Validity
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/KuT2n1w0Ixc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div class="resp-container">
+<iframe class="resp-iframe" src="https://www.youtube.com/embed/KuT2n1w0Ixc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+<hr>
+
+<div class="resp-container">
+<iframe class="resp-iframe" src="https://www.youtube.com/embed/6ozadM8mTzE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
