--- a/wk4.Rmd
+++ b/wk4.Rmd
@@ -11,7 +11,7 @@ Inmiddels heb je met je team volgende producten klaarstaan: een verzameling arti
 Wellicht ben je er tijdens het ontwerpproces achter gekomen dat je onderzoeksplan op onderdelen verbeterd kan worden. Tijdens het werkcollege bespreek je met de hele groep (klas) wat de kwaliteit van het uiteindelijke ontwerp wordt. Als hierover overeenstemming is bereikt, worden alle projectplannen aangepast.
 
 - Stel een definitief projectplan en vragenlijst op
-- Beschrijf in je notebook welke kwaliteitsverbeteringen je hebt doorgevoerd en voeg koppelingen toe naar de nieuwe versies (laat de koppelingen naar de oude versie staan)
+- Beschrijf in je notebook welke kwaliteitsverbeteringen je hebt doorgevoerd en voeg koppelingen toe naar de nieuwe versies (laat de koppelingen naar de oude versies staan)
 
 ### Documentatie
 
