--- a/wk2.Rmd
+++ b/wk2.Rmd
@@ -10,7 +10,7 @@ Ieder **lid** van ieder team heeft een wetenschappelijk artikel over het onderzo
 
 We zijn nog steeds bij de eerste stap van het <a href="https://en.wikipedia.org/wiki/Cross-industry_standard_process_for_data_mining" target="_blank">data analyse proces</a>, maar hebben inmiddels wel een onderzoeksthema. Door een duidelijke onderzoeksvraag te formuleren krijgt het onderzoek focus.
 
-Tijdens het werkcollege worden alle aangeleverde onderzoeksvragen doorgenomen. Er worden criteria afgesproken waarmee de kwaliteit van de vragen kan worden gemeten en de beste vraag wordt bepaald. Deze vraag zal worden gebruikt als centrale onderzoeksvraag voor alle teams. Bovendien worden afspraken gemaakt over deelvragen.
+Tijdens het werkcollege worden alle <a href="https://docs.google.com/presentation/d/1HxvxHEieafIOUuWo9YCdkzd9jEv8IkQ3TCjlfvAupgo/edit?usp=sharing" target="_blank">aangeleverde onderzoeksvragen</a> doorgenomen. Er worden criteria afgesproken waarmee de kwaliteit van de vragen kan worden gemeten en de beste vraag wordt bepaald. Deze vraag zal worden gebruikt als centrale onderzoeksvraag voor alle teams. Bovendien worden afspraken gemaakt over deelvragen.
 
 Ieder team start een online document met daarin hun onderzoeksplan. De structuur is als volgt:
 
