--- a/wk7.Rmd
+++ b/wk7.Rmd
@@ -4,13 +4,4 @@ output: html_document
 ---
 
 
-### Opdracht
-
-Voor deze week lever je volgende in.
-
-
-### Documentatie
-
-Intro SPSS
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ADDR3_Ng5CA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+Under construction
