--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ Teams houden hun voortgang bij in online notebooks. Volg onderstaande links voor
 - <a href="https://drive.google.com/open?id=1-ujFM2Arte_yDAHCbI-CFqK-8K4xYbTB8o_m8XFEvjA" target="_blank">Team 4</a>
 - <a href="https://drive.google.com/open?id=11kXlcm96TbyrO3q1ZbfMDc_CPjYerp5uKh6mrQTJ3Hg" target="_blank">Team 5</a>
 - <a href="https://drive.google.com/open?id=1WLPIYlp8kcEYYD9jyTH6589BFVSI2XL3qXFpqMv9YbQ" target="_blank">Team 6</a>
-- <a href="https://drive.google.com/open?id=1KIi7iYRcxyAjf9z9BAjcpdISKD82VasS3B0aE_u91Zo" target="_blank">Team 7</a>
+- <a href="https://ramonbergevoet.wixsite.com/onderzoek" target="_blank">Team 7</a>
 - <a href="https://drive.google.com/open?id=1UNtcU7artnmqoAlBHtA48Iy4Y-0uhMqymzRWxRv1p74" target="_blank">Team 8</a>
 - <a href="https://drive.google.com/open?id=1_1Z5xKQIuitrefLxVVn4TixSywF3l_0XNR8iON33jrE" target="_blank">Team 9</a>
 - <a href="https://drive.google.com/open?id=1d3DX9M16VMALh8qPZ66Vm5nvQpvFN4vdkCL3HwaR6vc" target="_blank">Team 10</a>
