--- a/wk1.Rmd
+++ b/wk1.Rmd
@@ -19,7 +19,7 @@ Het notebook moet bestaan uit een online document (website, blog, etc. of <a hre
 - <a href="https://witusj.github.io/b-cluster/presentation/index.html" target="_blank">Startpresentatie</a>
 - Dina Ribbink, Allard C.R. van Riel, Veronica Liljander, Sandra Streukens, (2004) "Comfort your online customer: quality, trust and loyalty on the internet", Managing Service Quality: An International Journal, Vol. 14 Issue: 6, pp.446-456, https://doi.org/10.1108/09604520410569784
 - <a href="https://applieddigitalskills.withgoogle.com/c/middle-and-high-school/en/research-and-develop-a-topic/overview.html" target="_blank">Tutorial</a> online onderzoeksrapportage (Google)
-- Evert de Haan, P.K. Kannan, Peter C. Verhoef, and Thorsten Wiesel (2018) "Device Switching in Online Purchasing: Examining the Strategic Contingencies", Journal of Marketing: September 2018, Vol. 82, No. 5, pp. 1-19, https://doi.org/10.1509/jm.17.0113
+- Evert de Haan, P.K. Kannan, Peter C. Verhoef, and Thorsten Wiesel (2018) "Device Switching in Online Purchasing: Examining the Strategic Contingencies", Journal of Marketing: September 2018, Vol. 82, No. 5, pp. 1-19, - <a href="https://www.rug.nl/feb/news/current/if-online-consumer-switches-from-smartphone-to-pc_-a-purchase-is-imminent" target="_blank">(Nieuwsartikel</a> - docent heeft een kopie van de publicatie)
 
 
 <hr>
