--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,7 @@ Teams houden hun voortgang bij in online notebooks. Volg onderstaande links voor
 
 - <a href="https://drive.google.com/open?id=1pTcvDSJAVtoy4snHTP8vBLb3CrjbDvT_v_fM-LUwvr0" target="_blank">Team 1</a>
 - <a href="https://drive.google.com/open?id=1Rpt9xdrpAVxcAd59vPQzF0HsjicEjNPtHcRdVdLQvd4" target="_blank">Team 2</a>
-- <a href="https://drive.google.com/open?id=1rCMsqTLtAjvXX-TXwLn1n3szb1ziZqdod66x_IW4flAg" target="_blank">Team 3</a>
+- <a href="https://tdeklein7.wixsite.com/website" target="_blank">Team 3</a>
 - <a href="https://drive.google.com/open?id=1-ujFM2Arte_yDAHCbI-CFqK-8K4xYbTB8o_m8XFEvjA" target="_blank">Team 4</a>
 - <a href="https://drive.google.com/open?id=11kXlcm96TbyrO3q1ZbfMDc_CPjYerp5uKh6mrQTJ3Hg" target="_blank">Team 5</a>
 - <a href="https://drive.google.com/open?id=1WLPIYlp8kcEYYD9jyTH6589BFVSI2XL3qXFpqMv9YbQ" target="_blank">Team 6</a>
