--- a/wk5.Rmd
+++ b/wk5.Rmd
@@ -3,5 +3,8 @@ title: "1e Practicum dataverwerking en analyse"
 output: html_document
 ---
 
+Deze week gaan we eerste stappen zetten met data analyse. Ter illustratie gebruiken we data die we zelf verzamelen via onderstaande formulier:
 
-Under construction
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdukuZO6ocXD2RF-dSoV-4F1fDXBOAqe3avTp0LV4ECbbX5eg/viewform?embedded=true" width="640" height="1290" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+De verzamelde data gaan we daarna bekijken en bewerken in [RStudio](https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH).
