--- a/wk6.Rmd
+++ b/wk6.Rmd
@@ -3,5 +3,4 @@ title: "2e Practicum dataverwerking en analyse"
 output: html_document
 ---
 
-
-Under construction
+Koppeling naar <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH" target="_blank">RStudio</a>
