--- a/afronding.Rmd
+++ b/afronding.Rmd
@@ -4,11 +4,6 @@ output: html_document
 ---
 
 
-### Opdracht
+## Succes met het tentamen!
 
-Voor deze week lever je volgende in.
-
-
-### Documentatie
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/k3FgK0KfhuU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+![examen](exam.jpg)
