--- a/wk1.Rmd
+++ b/wk1.Rmd
@@ -8,7 +8,7 @@ Voor het werkcollege heb je de beschrijving van de module bestudeerd (zie <a hre
 
 ### Opdracht
 
-Het thema voor dit semester is **e-commerce**. Dit wetenschappelijke <a href="https://repository.ubn.ru.nl//bitstream/handle/2066/138684/138684.pdf?sequence=1" target="_blank">artikel</a> bespreekt de relatie tussen e-trust en klantloyaliteit en zal tijdens het eerste werkcollege worden besproken.
+Het thema voor dit semester is **online vertrouwen**. Dit wetenschappelijke <a href="https://drive.google.com/open?id=1De98mxGp_90TA2JH0zWqnSrPm1lnFS8x" target="_blank">artikel</a> bespreekt de factoren die vertrouwen verhogen of juist verlagen bij online bezoekers van een website.
 
 Ieder lid van elk team zoekt nog een artikel binnen hetzelfde thema op. Dit artikel dient later ter inspiratie voor de bepaling van de onderzoeksvraag en onderzoeksopzet. In hun notebook beschrijven de teams de relevantie van het thema voor hun vakgebied, welke artikelen en onderzoeksvraagstukken ze hebben gevonden en wat de belangrijkste conclusies zijn. Uiteindelijk bedenkt ieder team één nieuwe onderzoeksvraag en neemt die mee naar het volgende werkcollege.
 
