--- a/index.Rmd
+++ b/index.Rmd
@@ -13,9 +13,9 @@ Dit is het platform voor B-cluster Onderzoek van de opleiding HAN Bedrijfskunde.
 
 Voor alle algemene, propedeuse-brede informatie verwijzen we naar het materiaal op <a href="https://onderwijsonline.han.nl/elearning/content/pNWMKBDj" target="_blank">Onderwijs Online</a>. Mocht je vragen hebben waarvoor je de antwoorden niet online hebt gevonden, dan kun je mailen naar: <a href="mailto:witek.tenhove@han.nl?Subject=B-cluster%20onderzoek%20" target="_top">Witek ten Hove</a> of <a href="mailto:david.hartsuiker@han.nl?Subject=B-cluster%20onderzoek%20" target="_top">David Hartsuiker</a>
 
-## Teams { .tabset}
+### Teams { .tabset}
 
-### BKA-B03
+#### BKA-B03
 
 <img src="bkab03.png" width=140px>
 
@@ -32,7 +32,7 @@ Ieder team houdt de voortgang bij in een online notebook. Volg onderstaande link
 - <a href="" target="_blank">Team 9</a>
 - <a href="" target="_blank">Team 10</a>
 
-### BKN-B07
+#### BKN-B07
 
 <img src="bknb07.png" width=140px>
 
