--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ Voor alle algemene, propedeuse-brede informatie verwijzen we naar het materiaal 
 
 <img src="bkab03.png" width=140px>
 
-Ieder team houdt de voortgang bij in een online notebook. Volg onderstaande links voor de afzonderlijke documenten:
+Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:
 
 - <a href="" target="_blank">Team 1</a>
 - <a href="" target="_blank">Team 2</a>
@@ -38,13 +38,47 @@ Ieder team houdt de voortgang bij in een online notebook. Volg onderstaande link
 
 <img src="bknb07.png" width=140px>
 
-Ieder team houdt de voortgang bij in een online notebook. Volg onderstaande links voor de afzonderlijke documenten:
+Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:
 
 - <a href="" target="_blank">Team 1</a>
 - <a href="" target="_blank">Team 2</a>
 - <a href="" target="_blank">Team 3</a>
 - <a href="" target="_blank">Team 4</a>
 - <a href="" target="_blank">Team 5</a>
+- <a href="" target="_blank">Team 6</a>
+- <a href="" target="_blank">Team 7</a>
+- <a href="" target="_blank">Team 8</a>
+- <a href="" target="_blank">Team 9</a>
+- <a href="" target="_blank">Team 10</a>
+
+### LMA-B01
+
+<img src="lmab01.png" width=140px>
+
+Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:
+
+- <a href="https://docs.google.com/document/d/10PUY4awe97yO6s4NEMfqIcjD_h5q_QxMZRAQLf7M0Z0/edit" target="_blank">Team 1</a>
+- <a href="https://docs.google.com/document/d/1ENVc82aNopEMhDnFMjGS5RAOoOQND1iXdpDx3Q2KXJI/edit" target="_blank">Team 2</a>
+- <a href="https://docs.google.com/document/d/1w8DvigfVpDxMLIPuNss9QnjbCJ_rjqlvkvlrhznGKUU/edit" target="_blank">Team 3</a>
+- <a href="https://docs.google.com/document/d/1GENH__7wyxnnder-75wbmdzOkwGr4zW6KbmG26Zpp6k/edit" target="_blank">Team 4</a>
+- <a href="https://docs.google.com/document/d/1UgfGYsN9i5SktFsjl0VMy2yARfHTB9LJplZQiy58hto/edit" target="_blank">Team 5</a>
+- <a href="" target="_blank">Team 6</a>
+- <a href="" target="_blank">Team 7</a>
+- <a href="" target="_blank">Team 8</a>
+- <a href="" target="_blank">Team 9</a>
+- <a href="" target="_blank">Team 10</a>
+
+### LMA-B02
+
+<img src="lmab02.png" width=140px>
+
+Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:
+
+- <a href="https://docs.google.com/document/d/1CWhdFefPOMxk-HyhbkTLbwJa3EsLM8l9P-KThzSX0Ig/edit#heading=h.37k9i2larym8" target="_blank">Team 1</a>
+- <a href="https://docs.google.com/document/d/1GKC4ZCZ3qZE5YkBy1zZLrT63cxFIt-cj-3gZLUfH5xQ/edit" target="_blank">Team 2</a>
+- <a href="https://docs.google.com/document/d/1GYYmSd-txfRiF06xFITTGWlrQ13WWoF3OAzDzpzjCu0/edit#heading=h.g657mr24mt0w" target="_blank">Team 3</a>
+- <a href="https://docs.google.com/document/d/1reNzdhxc1ekXkWpR7wUAO6cSBQc-6v4fNeSrnEPqxUU/edit#heading=h.4no0ops4xi49" target="_blank">Team 4</a>
+- <a href="https://docs.google.com/document/d/1Pt5wessAA-BzPhsR_YiYoeaive-18M_RE0gJcMDlMU4/edit#heading=h.c3o8ol3zior" target="_blank">Team 5</a>
 - <a href="" target="_blank">Team 6</a>
 - <a href="" target="_blank">Team 7</a>
 - <a href="" target="_blank">Team 8</a>
