--- a/index.Rmd
+++ b/index.Rmd
@@ -23,9 +23,9 @@ Voor alle algemene, propedeuse-brede informatie verwijzen we naar het materiaal 
 
 Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onderstaande links voor de afzonderlijke documenten:
 
-- <a href="" target="_blank">Team 1</a>
+- <a href="https://drive.google.com/drive/folders/1ICY8y7t6llkqcdPxvmbsRIulCCS9VGST" target="_blank">Team 1</a>
 - <a href="https://docs.google.com/document/d/17fcoX-J-iIt9GbnWXdFotfVjkdG-mxWv77M2UCfcNUQ/edit" target="_blank">Team 2</a>
-- <a href="" target="_blank">Team 3</a>
+- <a href="https://drive.google.com/drive/folders/1xCMrquyyHWDMMgDCtGFmjF20rfS9di7-?usp=sharing" target="_blank">Team 3</a>
 - <a href="https://drive.google.com/open?id=1qxyU974b0XDgl4S0FOHR7LdqKfxAM3NgT2OUl-wYP-8 " target="_blank">Team 4</a>
 - <a href="http://mvoost.simplesite.com/" target="_blank">Team 5</a>
 - <a href="" target="_blank">Team 6</a>
