--- a/index.Rmd
+++ b/index.Rmd
@@ -42,9 +42,9 @@ Ieder team houdt de voortgang bij in een online notebook of logboek. Volg onders
 
 - <a href="" target="_blank">Team 1</a>
 - <a href="" target="_blank">Team 2</a>
-- <a href="" target="_blank">Team 3</a>
-- <a href="" target="_blank">Team 4</a>
-- <a href="" target="_blank">Team 5</a>
+- <a href="https://drive.google.com/open?id=1c2QoKzQXb6XNEMSBBAe_9qsMZ6coN-XK" target="_blank">Team 3</a>
+- <a href="https://drive.google.com/drive/folders/1Eod1eee7GjCy95LUKr5nkUU5qLJ57BOc?usp=sharing" target="_blank">Team 4</a>
+- <a href="https://docs.google.com/document/d/1FbIfO9_9UhakDYspqbkwC24See5qj39PFUKV0Ncg-dQ/edit?usp=sharing" target="_blank">Team 5</a>
 - <a href="" target="_blank">Team 6</a>
 - <a href="" target="_blank">Team 7</a>
 - <a href="" target="_blank">Team 8</a>
