--- a/wk5.Rmd
+++ b/wk5.Rmd
@@ -5,6 +5,18 @@ output: html_document
 
 Deze week gaan we eerste stappen zetten met data analyse. Ter illustratie gebruiken we data die we zelf verzamelen via onderstaande formulier:
 
+## Groepen { .tabset}
+
+### Bedrijfskunde
+
+
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdukuZO6ocXD2RF-dSoV-4F1fDXBOAqe3avTp0LV4ECbbX5eg/viewform?embedded=true" width="640" height="1290" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 De verzamelde data gaan we daarna bekijken en bewerken in [RStudio](https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH).
+
+
+### Logistics Management
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf4j6kgxjbyO1ZwFNG4se9c_xhWtg0dia608rQQ3SH00CQ1fQ/viewform?embedded=true" width="640" height="1369" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+De resultaten kun je hier <a href="https://docs.google.com/spreadsheets/d/1W5Ex4ArMl5Jqn2Qxv1XwaB7u18zSoHIFaHUeVsIya0E/edit?usp=sharing" target="_blank">inzien</a>.
