--- a/wk4.Rmd
+++ b/wk4.Rmd
@@ -16,7 +16,7 @@ Wellicht ben je er tijdens het ontwerpproces achter gekomen dat je onderzoekspla
 ### Documentatie
 
 <div class="resp-container">
-<iframe class="resp-iframe" allowfullscreen="true" frameborder="0" mozallowfullscreen="true" src="https://docs.google.com/presentation/d/e/2PACX-1vRrRKgmtlDRYb6eqs1lH5cL81Ug0WUjfTK-LkE4IM47GCF3D_K4cnawEUj8V1GZmF0MpTBOHtZrDq_h/embed?start=false&loop=false&delayms=3000" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ0JfGXyVXHm5svcPi1pz5NtX0WLrp9AwG_HJSgOaPy4zwe7j38zt2dJbK64PJVln6hpQhXigGnA_wL/embed?start=true&loop=true&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </div>
 <hr>
 
