--- a/wk4.Rmd
+++ b/wk4.Rmd
@@ -14,8 +14,7 @@ Wellicht ben je er tijdens het ontwerpproces achter gekomen dat je onderzoekspla
 - Beschrijf in je notebook welke kwaliteitsverbeteringen je hebt doorgevoerd en voeg koppelingen toe naar de nieuwe versies (laat de koppelingen naar de oude versies staan)
 
 ### Documentatie
-
-<div class="resp-container">
+<div>
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ0JfGXyVXHm5svcPi1pz5NtX0WLrp9AwG_HJSgOaPy4zwe7j38zt2dJbK64PJVln6hpQhXigGnA_wL/embed?start=true&loop=true&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </div>
 <hr>
