Added links to practice files

--- a/wk7.Rmd
+++ b/wk7.Rmd
@@ -5,4 +5,7 @@ output: html_document
 
 Deze week werk je in je eigen <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH" target="_blank">R-Notebook</a> en volg je de eerste vier stappen uit het data analyse proces: begrijpen, voorbereiden, modeleren en evalueren.
 
+Tijdens het werkcollege werk je aan het <a href="https://docs.google.com/document/d/1cu_KUTD-s2wMANCeE0U2FaRoIkWVLjisT9dlWdSAB2k/copy">Practicum SPSS</a>.
+
+
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/CRISP-DM_Process_Diagram.png/1200px-CRISP-DM_Process_Diagram.png" width=70%>
