--- a/wk6.Rmd
+++ b/wk6.Rmd
@@ -2,6 +2,8 @@
 title: "2e Practicum dataverwerking en analyse"
 output: html_document
 ---
-Deze week werk je in je eigen <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH" target="_blank">R-Notebook</a> en volg je de eerste paar stappen uit het data analyse proces: understanding en preparation. 
+Deze week werk je in je eigen <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH" target="_blank">R-Notebook</a> en volg je de eerste paar stappen uit het data analyse proces: understanding en preparation.
+
+Tijdens het werkcollege werk je aan het <a href="https://docs.google.com/document/d/11C3wIJjAp1ueJAh1tNozkiOEg4C73QdIq3pOpMGssS4/copy">Practicum SPSS</a>.
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/CRISP-DM_Process_Diagram.png/1200px-CRISP-DM_Process_Diagram.png" width=70%>
